manifests/manifest-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: houdini-backend
  namespace: 3dh
spec:
  selector:
    app: houdini-backend
  ports:
    - name: proxymanger0
      protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
  name: houdini-backend
  namespace: 3dh
spec:
  tls:  
    - hosts:
        - 3dhoudini-wagmi-server.0xytocin.online
      secretName: 3dhoudiniwagmiserver0xytocinonline
  rules:
    - host: 3dhoudini-wagmi-server.0xytocin.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: houdini-backend
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: houdini-backend
  namespace: 3dh
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: houdini-backend
  template:
    metadata:
      labels:
        app: houdini-backend
    spec:
      imagePullSecrets:
        - name: 0xytocin
      containers:
        - name: 3dhoudini-backend
          image: 0xytocin.azurecr.io/3dh/3dh-backend
          imagePullPolicy: Always
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 5000
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
